--- a/package.json
+++ b/package.json
@@ -1,38 +1,53 @@
 {
-  "name": "@uniswap/v2-sdk",
+  "name": "@cardioswap/v2-sdk",
   "license": "MIT",
-  "version": "3.2.0",
-  "description": "🛠 An SDK for building applications on top of Uniswap V2",
+  "version": "1.0.0",
+  "description": "🛠 An SDK for building applications on top of CardioSwap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-v2-sdk.git",
+  "repository": "https://github.com/cardioswap/v2-sdk.git",
   "keywords": [
-    "uniswap",
-    "ethereum"
+    "cardioswap",
+    "pulsechain"
   ],
-  "module": "dist/v2-sdk.esm.js",
+  "module": "dist/sdk.esm.js",
   "scripts": {
     "lint": "tsdx lint src test",
+    "lint:fix": "tsdx lint src test --fix",
     "build": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test",
     "prepublishOnly": "tsdx build"
   },
   "dependencies": {
-    "@ethersproject/address": "^5.0.0",
-    "@ethersproject/solidity": "^5.0.0",
-    "@uniswap/sdk-core": "^4.0.2",
+    "@cardioswap/v2-core": "https://github.com/cardioswap/v2-core.git",
+    "big.js": "^5.2.2",
+    "decimal.js-light": "^2.5.0",
+    "jsbi": "^3.1.1",
     "tiny-invariant": "^1.1.0",
-    "tiny-warning": "^1.0.3"
+    "tiny-warning": "^1.0.3",
+    "toformat": "^2.0.0"
+  },
+  "peerDependencies": {
+    "@ethersproject/address": "^5.0.0-beta",
+    "@ethersproject/contracts": "^5.0.0-beta",
+    "@ethersproject/networks": "^5.0.0-beta",
+    "@ethersproject/providers": "^5.0.0-beta",
+    "@ethersproject/solidity": "^5.0.0-beta"
   },
   "devDependencies": {
+    "@ethersproject/address": "^5.0.2",
+    "@ethersproject/contracts": "^5.0.2",
+    "@ethersproject/networks": "^5.0.2",
+    "@ethersproject/providers": "^5.0.5",
+    "@ethersproject/solidity": "^5.0.2",
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
-    "@uniswap/v2-core": "^1.0.1",
-    "tsdx": "^0.14.1"
+    "babel-plugin-transform-jsbi-to-bigint": "^1.3.1",
+    "tsdx": "^0.12.3"
   },
   "engines": {
     "node": ">=10"
